--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#000000</color>
     <color name="gray">#757575</color>
     <color name="white">#FFFFFF</color>
+    <color name="sunriseBlue">#D3DAD5</color>
+    <color name="barkBrown">#482723</color>
+    <color name="darkSageGreen">#514E38</color>
 </resources>
