--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,7 +96,16 @@
                     android:textColor="@color/white"
                     android:background="@drawable/button_bg"
                     android:layout_marginTop="16dp"
-                    android:padding="12dp" />
+                    android:padding="12dp"/>
+                <Button
+                    android:id="@+id/registerButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Register"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button_bg"
+                    android:layout_marginTop="16dp"
+                    android:padding="12dp"/>
 
             </LinearLayout>
 
