--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -20,7 +20,7 @@
             android:id="@+id/buttonAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Account"
+            android:text="@string/account"
             android:backgroundTint="@color/barkBrown"
             android:textColor="@color/sunriseBlue"/>
     </LinearLayout>
@@ -30,7 +30,7 @@
         android:id="@+id/ProductsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hi there,"
+        android:text="@string/hi_there"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginStart="20dp"
