--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -11,19 +11,18 @@
     tools:context=".ProductListActivity">
 
     <!-- Top Account Button (aligned to the right) -->
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/buttonAccount"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:gravity="end">
-        <Button
-            android:id="@+id/buttonAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/account"
-            android:backgroundTint="@color/barkBrown"
-            android:textColor="@color/sunriseBlue"/>
-    </LinearLayout>
+        android:text="@string/account"
+        android:backgroundTint="@color/barkBrown"
+        android:textColor="@color/sunriseBlue"
+        android:layout_gravity="end"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        />
 
     <!-- Hi there, TextView -->
     <TextView
@@ -74,22 +73,15 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
 
-        <TextView
-            android:id="@+id/tvDeliveryAreaLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Filter by Delivery Area:"
-            android:textSize="16sp"
-            android:textColor="@color/barkBrown"
-            android:paddingBottom="4dp"/>
 
         <EditText
             android:id="@+id/editTextCustomerLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your location"
+            android:hint="@string/city"
             android:padding="8dp"
-            android:background="@android:drawable/edit_text"
+            android:background="@drawable/edittext_bg"
+            android:backgroundTint="@color/white"
             android:textColor="@color/barkBrown"/>
     </LinearLayout>
 
@@ -97,21 +89,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="20dp">
+        android:gravity="center">
+
         <Button
             android:id="@+id/buttonFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Apply Filter"
+            android:text="@string/produts_in_area"
             android:backgroundTint="@color/barkBrown"
-            android:textColor="@color/sunriseBlue"/>
+            android:textColor="@color/sunriseBlue"
+            android:textSize="14sp"/>
         <Button
             android:id="@+id/buttonResetFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Reset Filter"
-            android:layout_marginStart="8dp" />
+            android:text="@string/all_products"
+            android:backgroundTint="@color/barkBrown"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/sunriseBlue"
+            android:textSize="14sp"/>
     </LinearLayout>
 
     <!-- Container for product cards -->
