--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -75,22 +75,33 @@
             android:stretchColumns="1"
             android:padding="20dp">
 
-            <TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
                 <TextView
+                    android:id="@+id/itemTitle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Item"
-                    android:layout_weight="3" />
+                    android:layout_weight="1"
+                    android:padding="16dp" />
+
                 <TextView
+                    android:id="@+id/itemQuantity"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Quantity"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:padding="16dp" />
+
                 <TextView
+                    android:id="@+id/itemPrice"
                     android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:padding="16dp" />
+
+                <Button
+                    android:id="@+id/buttonRemove"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price"
-                    android:layout_weight="1" />
+                    android:text="Remove" />
             </TableRow>
 
         </TableLayout>
