--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="16dp">
 
         <Button
-            android:id="@+id/buttonAccount"
+            android:id="@+id/buttonReturn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Return"
