--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -61,6 +61,19 @@
         android:backgroundTint="@color/barkBrown"
         android:textColor="@color/sunriseBlue"
         />
+    <Button
+        android:id="@+id/buttonReturnHome"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Return"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSalesHistory"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:backgroundTint="@color/barkBrown"
+        android:textColor="@color/sunriseBlue"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
