--- a/app/src/main/res/layout/listing_card.xml
+++ b/app/src/main/res/layout/listing_card.xml
@@ -19,7 +19,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:padding="10dp"
-            android:src="@drawable/bananas"
+            android:src="@drawable/error"
             android:layout_weight="1"
         />
 
